alignment fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,13 +38,6 @@ body {
   }
   
 
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-}
-
 .parallax {
     position: relative;
     height: 100vh;
@@ -112,10 +105,16 @@ body {
 .text-header {
     margin: 20px 0;
 }
-
+#museums h1 {
+    color: #725144;
+margin-bottom: 50px;
+font-size: 30px;
+}
 #museums {
     justify-content: center;
     align-items: center;
+   
+    text-align: center;
     height: 90vh;
 }
   .container-museum{
